fix z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,36 +1,42 @@
-.info {
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.content {
+    position: relative;
+    .info {
+        z-index: 0;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
 
-    .title {
-        padding-top: 200px;
-        font-size: 3em;
-        font-family: "Noto Sans", sans-serif;
+        .title {
+            padding-top: 200px;
+            font-size: 3em;
+            font-family: "Noto Sans", sans-serif;
+        }
+
+        h2 {
+            padding-top: 300px;
+        }
     }
 
-    h2 {
-        padding-top: 300px;
+    .particles {
+        z-index: -1;
+        position: absolute;
+        overflow: hidden;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
     }
-}
 
-.particles {
-    position: absolute;
-    overflow: hidden;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
-
-.cloud-layer {
-    position: absolute;
-    overflow: hidden;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    .cloud-layer {
+        z-index: 1;
+        position: absolute;
+        overflow: hidden;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
